--- a/part4/package.json
+++ b/part4/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles" 
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -25,7 +26,6 @@
     "supertest": "^6.2.4"
   },
   "jest": {
-    "testEnvironment": "node",
-    "testTimeout": 10000
+    "testEnvironment": "node"
   }
 }
